# 1kiss

./: .gitignore  .travis.yml  README.md  build.ini  build.properties  build.ps1  ndk.properties  source.properties
.circleci/: config.yml
.github/workflows/: all-ci.yml  android-arm-ci.yml  android-arm64-ci.yml  android-ci.yml  android-x86-ci.yml  blank.yml  build-ci.yml  build.yml  build2-ci.yml  buildall-ci.yml  buildtest.yml  dist-ci.yml  dist.yml  dist_llvm.yml  distdall-ci.yml  ios-arm-ci.yml  ios-arm64-ci.yml  ios-armv7-ci.yml  ios-ci.yml  ios-x86_64-ci.yml  linux-ci.yml  manual.yml  osx-ci.yml  test-ci.yml  win-ci.yml  windows-ci.yml
1k/: 1kiss.ps1  20-ios-sim.conf  build.ps1  build.sh  build1.ps1  build1.sh  buildall.ps1  buildall.sh  config.h.in  config_ab.h.in  copy1.cpp  copy1k.cpp  dist.sh  distall.sh  fetch.cmake  fetch.ps1  fetchd.ps1  fetchurl.ps1  gn-print-args.patch  install-cmake.sh  install-pwsh.sh  ios.cmake  ios.mini.cmake  manifest.ps1  nsdk1k.cpp  opensslconf.h.in  ossl-build.conf  resolv_uri.ps1  setup-msvc.ps1  xcutils.ps1
1k/dm/: CMakeLists.txt  dm.ps1
1k/dmcp/: CMakeLists.txt  dmcp.ps1  dmcp.sh
1k/reloc/: powershell.bat
sources/: jpeg-turbo.properties  openssl.properties
sources/openssl/: build.properties  clean.ps1
src/angle/: build.yml  clean1.ps1  dist1.sh  install1.ps1  patch1.ps1  rel1.ps1
src/cares/: 0001-fix-android-armv7-build.patch  ares_build.h  build.yml  clean1.ps1  clean1.sh  dist1.sh
src/curl/: CMakeLists.txt  build.yml  clean1.ps1  clean1.sh  dist1.sh
src/dawn/: build.yml  rel1.ps1  step.md
src/glsl-optimizer/: CMakeLists.txt  build.yml  clean1.ps1  dist1.sh
src/jpeg-turbo/: CMakeLists.txt  build.yml  clean.ps1  clean.sh  clean1.ps1  clean1.sh  dist.sh  dist1.sh  patch1.ps1
src/llvm/: build.yml  clean1.ps1  clean1.sh  dist1.sh  install1.ps1
src/luajit/: Makefile  build.yml  build1.ps1  clean1.ps1  clean1.sh  dist1.sh  install1.ps1  install1.sh  patch1.sh
src/luajit/apple/: Makefile
src/openssl/: build.yml  build1.ps1  clean.ps1  clean.sh  clean1.ps1  clean1.sh  dist.sh  dist1.sh  opensslconf.h.in  patch1.ps1
src/zlib/: CMakeLists.txt  build.yml  clean1.ps1  clean1.sh  dist1.sh  patch1.ps1  zconf.h
(+2 files in other folders)
